# Hanoi-Crossing

./: README.md  pyproject.toml
examples/: n1_a_wins.txt  n2_b_wins.txt
src/hanoi_crossing/: __init__.py  engine.py  random_play.py  replay.py
tests/: test_engine.py
