[project]
name = "hanoi-crossing"
version = "0.1.0"
description = "Hanoi Crossing — two-player shared-pole Tower of Hanoi game engine"
readme = "README.md"
authors = [
    { name = "tb91117", email = "teddybrown91117@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hanoi-replay = "hanoi_crossing.replay:main"
hanoi-random = "hanoi_crossing.random_play:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
]
